--- a/index.htm
+++ b/index.htm
@@ -7,6 +7,6 @@ setTimeout(function(){location.href="http://2ssa.ir/public/prneo/"} , 5000);
 </head>
 <body>
 <h1>Hello World</h1>
-<p>This if for educational testing & Please kindly contact If there is any problem or need upgrade: shahryar.barani@webraymon.com</p>
+<p>This is for educational testing & Please kindly contact If there is any problem or need upgrade: shahryar.barani@webraymon.com</p>
 </body>
 </html>
